# prefect-cloud-gcp

./: README.md  pyproject.toml
.github/actions/blocks/: action.yml
.github/actions/blocks-quickstart/: action.yml  blocks.py
.github/actions/container-image/: action.yml
.github/actions/deploy-container/: action.yml
.github/workflows/: blocks-quickstart.yml  blocks.yml  container-image.yml  deploy-container.yml  getting-started.yml
